# yew-actix-web-app

./: README.md
backend/: .env  .gitignore  Cargo.toml
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/src/: main.rs
backend/src/controllers/: index_controller.rs
backend/src/entities/: user.rs
backend/src/entity/: user.rs
backend/src/routes/: index.rs  root.rs
frontend/: Cargo.toml
frontend/src/: main.rs
frontend/src/components/: mod.rs
frontend/src/components/auth/: signup.rs
frontend/src/components/home/: index.rs
frontend/src/components/nav/: top_nav.rs
