[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = {version= "1.12.0", features = ["attributes"]}
actix-web = "4"
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
sea-orm = { version = "0.11.0", features = ["sqlx-postgres","runtime-async-std-native-tls","uuid", "macros", "chrono" ] }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.2.2", features = ["serde", "v4"]}
actix-cors = "0.6.4"
