[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwasm = "0.5.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.93"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
yew = { version = "0.20.0", features = ["csr"] }
